@@ -27,6 +27,13 @@ def pytest_unconfigure(config):
 # collection hooks
 # -------------------------------------------------------------------------
 
+def pytest_ignore_collect_path(path, config):
+    """ return true value to prevent considering this path for collection. 
+    This hook is consulted for all files and directories prior to considering
+    collection hooks. 
+    """
+pytest_ignore_collect_path.firstresult = True
+
 def pytest_collect_directory(path, parent):
     """ return Collection node or None for the given path. """
 pytest_collect_directory.firstresult = True
